--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8"
+  },
+  "volta": {
+    "node": "20.18.0"
   }
 }
