--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "events": "^3.3.0",
     "immer": "^10.1.1",
     "react": "^18.3.1",
